# ocelotter

./: .gitignore  Cargo.toml  README.md  ben_branch_diff.txt  runtime_tests.rs
.github/workflows/: rust.yml
resources/test/: AddFieldInteger.java  AddLdc.java  FieldHaver.java  MyI.java  TestMathSin.java
resources/test/jar/: Bar.java  Foo.java
runtime/: Cargo.toml
runtime/src/: constant_pool.rs  interp_stack.rs  klass_parser.rs  klass_repo.rs  lib.rs  native_methods.rs  object.rs  otfield.rs  otklass.rs  otmethod.rs  simple_heap.rs  tests.rs
src/: interpreter.rs  klass.rs  klass_parser.rs  lib.rs  loop.txt  main.rs  opcode.rs  opcode.txt  options.rs  runtime.rs  runtime_tests.rs  tests.rs
src/interpreter/: interp_stack.rs  native_methods.rs  object.rs  opcode.rs  simple_heap.rs  thread.rs  values.rs
src/klass/: klass_parser.rs  klass_repo.rs  otfield.rs  otklass.rs  otmethod.rs
src/runtime/: object.rs
tests/: integration_tests.rs
util/: Cargo.toml
util/src/: lib.rs
