[package]
name = "ocelotter"
version = "0.1.0"
authors = ["Ben Evans <benjamin.john.evans@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.2.7"
lazy_static = "1.2.0"
structopt = { version = "0.3" }
zip = "0.5.3"
ocelotter_runtime = {path = "runtime"}
ocelotter_util = {path = "util"}

[profile.release]
lto = true
