[package]
name = "ocelotter"
version = "0.1.0"
authors = ["Ben Evans <benjamin.john.evans@gmail.com>"]
edition = "2018"

[dependencies]
assert_float_eq = "1"
byteorder = "1.2.7"
lazy_static = "1.2.0"
structopt = { version = "0.3" }
zip = "0.5.3"
regex = "1"
parking_lot = "0.9"

[profile.release]
lto = true
